crates/pardosa/tests/ui/reader_does_not_coerce_to_writer.stderr
error[E0308]: mismatched types
 --> tests/ui/reader_does_not_coerce_to_writer.rs:3:5
  |
2 | fn coerce<'a>(store: &'a EventStore<u64>) -> StoreWriter<'a, u64> {
  |                                              -------------------- expected `store::inner::StoreWriter<'a, u64>` because of return type
3 |     store.reader()
  |     ^^^^^^^^^^^^^^ expected `StoreWriter<'_, u64>`, found `StoreReader<'_, u64>`
  |
  = note: expected struct `store::inner::StoreWriter<'a, u64>`
             found struct `store::inner::StoreReader<'_, u64>`
